feat: added new post

--- a/src/content/blog/web-vitals.mdx
+++ b/src/content/blog/web-vitals.mdx
@@ -1,7 +1,6 @@
 ---
-title: What are web vitals?
+title: The Key to a Faster, More Engaging Website
 description: Web Vitals are a set of metrics that measure the quality of user experience on the web. They include Largest Contentful Paint (LCP), First Input Delay (FID), and Cumulative Layout Shift (CLS).
-image: "/images/blog/web_vitals.webp"
 date: "2022-12-31"
 author: "ruijadom"
 ---
