docs: add more items

--- a/src/content/blog/compound-components.mdx
+++ b/src/content/blog/compound-components.mdx
@@ -86,6 +86,7 @@ They're a game-changer for building flexible UIs. Instead of wrestling with endl
 - Style and arrange pieces independently, without worrying about breaking the internal structure.
 - Keep things simple with an API that feels natural, much like writing standard HTML.
 - Encapsulate complexity within the components, allowing you to keep your codebase clean and focused.
+- Reduce the number of imports by consolidating related components under a single namespace.
 - By breaking down functionality into logical parts, compound components make your UI not only more adaptable but also easier to understand and maintain.
 
 ## A Simple Example: Toggle Component
