--- a/src/content/blog/micro-frontend.mdx
+++ b/src/content/blog/micro-frontend.mdx
@@ -482,7 +482,7 @@ Micro-frontends with Vite offer a powerful way to scale both your codebase and y
 
 By splitting your frontend into independently deployable pieces, you enable teams to move faster, deploy with confidence, and maintain clear ownership of their domains. The key is to carefully consider whether the added complexity is worth the benefits for your specific situation.
 
-Start small—perhaps extract a single feature as a micro-frontend and see how it feels. The beauty of this architecture is that you can adopt it incrementally, learning as you go.
+Start small perhaps extract a single feature as a micro-frontend and see how it feels. The beauty of this architecture is that you can adopt it incrementally, learning as you go.
 
 ---
 
